Prevented scene selection details from wrapping.

--- a/modules/gui-react/frontend/src/app/home/body/process/mosaic/sceneSelection.module.css
+++ b/modules/gui-react/frontend/src/app/home/body/process/mosaic/sceneSelection.module.css
@@ -96,6 +96,10 @@
     border-top: 1px solid #514F4E;
 }
 
+.details > * {
+    white-space: nowrap;
+}
+
 .dataSet {
     grid-area: dataSet;
 }
